

Directory modules/hasim-mips/isa/definition/smips
 isa_decode_functions.bsv  Locally Modified          285 
 isa_derived_types.bsv     Locally Modified          285 

New functions corresponding to Alpha changes.

----------
mcadler     Date: Fri Mar  1 14:11:48 EST 2013  CSN: CSN-hasim-mips-287
                  Fri Mar  1 19:11:48 UTC 2013


Directory config/pm/hasim-mips/smips-unpipelined/with-cache
 smips_unpipelined_with_cache_exe.apm Locally Modified          286 

Changed AWB parameter NUM_CPUS to MAX_NUM_CPUS.

----------
mcadler     Date: Sat Mar 16 11:32:17 EDT 2013  CSN: CSN-hasim-mips-288
                  Sat Mar 16 15:32:17 UTC 2013


Directory config/pm/hasim-mips/smips-unpipelined/with-cache
 smips_unpipelined_with_cache_exe.apm Locally Modified          287 

Directory config/pm/hasim-mips/smips-unpipelined/no-cache
 smips_unpipelined_no_cache_exe.apm Locally Modified          287 

Directory config/pm/hasim-mips/smips-superscalar-ooo
 smips_superscalar_ooo_exe.apm Locally Modified          287 
 smips_superscalar_ooo_htg.apm Locally Modified          287 

Directory config/pm/hasim-mips/smips-inorder
 smips_inorder_exe.apm     Locally Modified          287 
 smips_inorder_htg.apm     Locally Modified          287 

Add topology manager to timing models.

----------
mcadler     Date: Sat Apr 20 08:53:52 EDT 2013  CSN: CSN-hasim-mips-289
                  Sat Apr 20 12:53:52 UTC 2013


Directory config/pm/hasim-mips/smips-unpipelined/with-cache
 smips_unpipelined_with_cache_exe.apm Locally Modified          288 

Directory config/pm/hasim-mips/smips-inorder
 smips_inorder_exe.apm     Locally Modified          288 
 smips_inorder_htg.apm     Locally Modified          288 

Change awb type name from hasim_l1_caches to hasim_private_caches in preparation
for adding an L2 cache.  The private caches will hold all CPU-private caches
and, as a group, will have connections up to the CPU and down to the
uncore.