@@ -232,3 +232,4 @@ CSN-hasim-mips-286
 CSN-hasim-mips-287
 CSN-hasim-mips-288
 CSN-hasim-mips-289
+CSN-hasim-mips-290
